--- a/WonderfulAnimeList/AnimeList/templates/animelist/index.html
+++ b/WonderfulAnimeList/AnimeList/templates/animelist/index.html
@@ -1,8 +1,14 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Anime List</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="{% static 'animelist/style.css' %}">
 </head>
 <body>
     <h1>Anime List</h1>
